# graphify-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  bailian.py  chunking.py  config.py  document_loaders.py  main.py  schemas.py  storage.py  vector_store.py
backend/tests/: test_chunking.py  test_document_loaders.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
